--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+#[===[
 include(FetchContent)
 set(RAYLIB_VERSION 5.5.0)
 FetchContent_Declare(
@@ -8,6 +9,24 @@ FetchContent_Declare(
 )
 set(BUILD_EXAMPLES OFF CACHE INTERNAL "") # Don't build example code
 FetchContent_MakeAvailable(raylib)
+]===]
 
+find_package(PkgConfig REQUIRED)
+find_package(raylib REQUIRED)
+
+# Include GLib headers
+pkg_check_modules(GLIB REQUIRED glib-2.0)
+include_directories(${GLIB_INCLUDE_DIRS})
+link_directories(${GLIB_LIBRARY_DIRS})
+add_definitions(${GLIB_CFLAGS_OTHER})
+
+# Create executable and link libraries
 add_executable(${PROJECT_NAME} main.c)
-target_link_libraries(${PROJECT_NAME} raylib)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${GLIB_INCLUDE_DIRS})
+target_link_directories(${PROJECT_NAME} PRIVATE ${GLIB_LIBRARY_DIRS})
+target_compile_options(${PROJECT_NAME} PRIVATE ${GLIB_CFLAGS_OTHER})
+
+
+target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${GLIB_LIBRARIES})
