--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,6 +1,4 @@
-find_package(m)
+FILE(GLOB LIB_ENGINE_FILES *.c) # Add all .c files in directory to library
+add_library(lib_engine ${LIB_ENGINE_FILES})
 
-FILE(GLOB C_ENGINE_FILES *.c) # Add all .c files in directory to library
-add_library(lib_engine ${C_ENGINE_FILES})
-
-target_link_libraries(lib_engine m)
+target_link_libraries(lib_engine m) # <math.h>
