--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,13 @@
 find_package(SDL3 REQUIRED)
 
+set(TESTING_NAME FieldPhysicsTest)
+
 # Create executable and link libraries
 FILE(GLOB SOURCE_FILES *.c) # Add all .c files in directory to library
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${TESTING_NAME} ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE 
+target_link_libraries(${TESTING_NAME}  
+    FieldPhysics
     SDL3
 )
+
