Made lib install

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,18 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     VERSION ${PROJECT_VERSION}
 )
 
+# Enable flags for warnings for project maintenance
 target_compile_options(${PROJECT_NAME} PRIVATE
   -Wall
   -Wextra
+)
+
+install(TARGETS ${PROJECT_NAME}
+  LIBRARY DESTINATION lib
+)
+
+# Dump all headers in the include directory
+FILE(GLOB_RECURSE HEADER_FILES *.h)
+install(FILES ${HEADER_FILES}
+  DESTINATION include/${PROJECT_NAME}${PROJECT_VERSION}
 )
